golang-http/cilium-policies/nettools.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: nettools
  name: nettools

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nettools-deployment
  namespace: nettools
  labels:
    app: nettools
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nettools
  template:
    metadata:
      labels:
        app: netools
    spec:
      containers:
      - name: nettools-container
        image: jrecord/nettools:latest
        command:
          - sleep
          - "3600"
        imagePullPolicy: IfNotPresent
