golang-http/cilium-policies/nettools-to-envoy-egress-gateway-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: nettools-to-envoy-egress-gateway-policy
spec:
  endpointSelector: 
    matchLabels:
      app: nettools
  ingress:
    - fromEndpoints:
        - matchLabels:
            app: envoy
            io.kubernetes.pod.namespace: envoy
      toPorts:
        - ports:
            - port: "443"
        - ports:
            - port: "80"
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toEndpoints:
        - matchLabels:
            app: envoy
            io.kubernetes.pod.namespace: envoy
      toPorts:
        - ports:
            - port: "443"
        - ports:
            - port: "80"
